raffia/tests/error/scss/at-rule/forward/show-nothing.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `;`
  ┌─ show-nothing.scss:1:18
  │
1 │ @forward "a" show;
  │                  ^


